# app/api/api_model/login.go
@@ -1,0 +1,7 @@
+package api_model
+
+type Login struct {
+	Username string `valid:"user_name     @required"`
+	Password string `valid:"password@required"`
+	Kid      string `valid:"kid     @required"`
+}
